--- a/UI/Login/SearchSelectionPage.xaml
+++ b/UI/Login/SearchSelectionPage.xaml
@@ -75,25 +75,25 @@
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto"></ColumnDefinition>
                         <ColumnDefinition Width="100"></ColumnDefinition>
-                        <ColumnDefinition Width="Auto"></ColumnDefinition>
+                        <ColumnDefinition Width="*"></ColumnDefinition>
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="*"></RowDefinition>
                         <RowDefinition Height="Auto"></RowDefinition>
                         <RowDefinition Height="Auto"></RowDefinition>
                     </Grid.RowDefinitions>
 
-                    <TextBlock Grid.Column="0" Grid.Row="0" Margin="3" VerticalAlignment="Center" FontWeight="Bold" Text="Key Word:" />
-                    <TextBox Name="TextBoxTest" Grid.Column="1" Grid.Row="0" Margin="3" HorizontalAlignment="Stretch" 
-					 Text="{Binding Path=SpecimenDescription}" KeyUp="TextBoxSpecimenKeyWord_KeyUp" />
+                    <TextBlock Grid.Column="0" Grid.Row="0" Margin="3" VerticalAlignment="Center" FontWeight="Bold" Text="Test:" />
+                    <ListBox Name="ListBoxTest" Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="2" Margin="3" HorizontalAlignment="Stretch" 
+					 ItemsSource="{Binding Path=PanelSetCollection}" DisplayMemberPath="PanelSetName" />
 
                     <TextBlock Grid.Column="0" Grid.Row="1" Margin="3" VerticalAlignment="Center" FontWeight="Bold" Text="Start Date:" />
-                    <TextBox Name="TextBoxTestStartDate" Grid.Column="1" Grid.Row="1" Margin="3" HorizontalAlignment="Stretch" Text="{Binding Path=KeyWordStartDate, Converter={StaticResource ShortDateConverter}}" />
+                    <TextBox Name="TextBoxTestStartDate" Grid.Column="1" Grid.Row="1" Margin="3" HorizontalAlignment="Stretch" Text="{Binding Path=TestStartDate, Converter={StaticResource ShortDateConverter}}" />
 
                     <TextBlock Grid.Column="0" Grid.Row="2" Margin="3" VerticalAlignment="Center" FontWeight="Bold" Text="End Date:" />
-                    <TextBox Name="TextBoxTestEndDate" Grid.Column="1" Grid.Row="2" Margin="3" HorizontalAlignment="Stretch" Text="{Binding Path=KeyWordEndDate, Converter={StaticResource ShortDateConverter}}" />
+                    <TextBox Name="TextBoxTestEndDate" Grid.Column="1" Grid.Row="2" Margin="3" HorizontalAlignment="Stretch" Text="{Binding Path=TestEndDate, Converter={StaticResource ShortDateConverter}}" />
 
-                    <Button Grid.Column="2" Grid.Row="2" Width="75" Height="25" Click="ButtonSpecimenDescriptionSearch_Click">Search</Button>
+                    <Button Grid.Column="2" Grid.Row="2" Width="75" Height="25" Click="ButtonTestSearch_Click">Search</Button>
                 </Grid>
             </TabItem>
             <TabItem Header="Positive H-Pylori">
