--- a/UI/Login/SearchSelectionPage.xaml
+++ b/UI/Login/SearchSelectionPage.xaml
@@ -26,6 +26,7 @@
                         <RowDefinition Height="Auto"></RowDefinition>
                         <RowDefinition Height="Auto"></RowDefinition>
                         <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
                     </Grid.RowDefinitions>
 
                     <TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" Text="Report No:" />
@@ -41,6 +42,9 @@
 
                     <TextBlock Grid.Column="0" Grid.Row="4" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" Text="Client Accessioned Cases:" />
                     <Button Grid.Column="2" Grid.Row="4" Width="75" Height="25" Margin="2,2,2,2" Click="ButtonClientAccessionedSearch_Click">Search</Button>
+
+                    <TextBlock Grid.Column="0" Grid.Row="5" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" Text="Dr. Kurtzman Cases:" />
+                    <Button Grid.Column="2" Grid.Row="5" Width="75" Height="25" Margin="2,2,2,2" Click="ButtonDrKurtzmanCaseSearch_Click">Search</Button>
 
                 </Grid>
             </TabItem>            
