--- a/UI/Login/LoginWorkspace.xaml
+++ b/UI/Login/LoginWorkspace.xaml
@@ -395,13 +395,19 @@
 		</Grid>
 
 		<StatusBar Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2">			
+            
 			<StatusBarItem>
 				<TextBlock Margin="2" TextAlignment="Right" HorizontalAlignment="Stretch" VerticalAlignment="Center">Report No:</TextBlock>
 			</StatusBarItem>
+            
 			<StatusBarItem>
-				<TextBlock Width="100" Margin="2" TextAlignment="Left" HorizontalAlignment="Stretch" VerticalAlignment="Center" Text="{Binding Path=ReportNo}"></TextBlock>
+				<TextBlock Width="200" Margin="2" TextAlignment="Left" HorizontalAlignment="Stretch" VerticalAlignment="Center" Text="{Binding Path=ReportNo}"></TextBlock>
 			</StatusBarItem>
 
-		</StatusBar>
+            <StatusBarItem>
+                <TextBlock Width="200" Margin="2" TextAlignment="Left" HorizontalAlignment="Stretch" VerticalAlignment="Center" Text="{Binding Path=SelectedItemCount}"></TextBlock>
+            </StatusBarItem>
+
+        </StatusBar>
 	</Grid>
 </UserControl>
