--- a/UI/Flow/FlowWorkspace.xaml
+++ b/UI/Flow/FlowWorkspace.xaml
@@ -97,10 +97,10 @@
 				  <Image Source="/Graphics/Document.jpg"></Image>
 				</Button>				
 			<StackPanel Orientation="Horizontal">
-				<TextBlock Text="{Binding Path=CaseHeader}" VerticalAlignment="Center" Margin="5" FontWeight="Bold"></TextBlock>        
-				<TextBlock Style="{StaticResource HeadingTextBlock}" VerticalAlignment="Center">Locked By:</TextBlock>
-                    <TextBlock Name="textBoxLockMessage" Style="{StaticResource HeadingTextBlock}" VerticalAlignment="Center" Text="{Binding Path=AccessionOrder.LockAquiredByUserName}" Width="200" TextAlignment="Left"></TextBlock>
-			</StackPanel>
+                    <TextBlock Text="{Binding Path=PanelSetOrderLeukemiaLymphoma.ReportNo}" VerticalAlignment="Center" Margin="2,2,2,2" FontWeight="Bold"></TextBlock>
+                    <TextBlock Text=":" VerticalAlignment="Center" Margin="2,2,2,2" FontWeight="Bold"></TextBlock>
+                    <TextBlock Text="{Binding Path=AccessionOrder.PatientDisplayName}" VerticalAlignment="Center" Margin="2,2,2,2" FontWeight="Bold"></TextBlock>
+            </StackPanel>
 			</StackPanel>
 			<TabControl Grid.Column="0" Grid.Row="1" Name="tabControlFlow">
 				<TabItem Header="General" Name="TabItemGeneral">					
@@ -746,6 +746,7 @@
                         </Grid.RowDefinitions>
 
                         <Button Width="125" Height="30" Grid.Column="0" Grid.Row="0" Click="ButtonReportOrder_Click" HorizontalAlignment="Left" Margin="2,2,2,2">Additional Testing</Button>
+                        <Button Width="75" Height="30" Grid.Column="0" Grid.Row="0" Click="ButtonUnselect_Click" HorizontalAlignment="Center" Margin="2,2,2,2">Unselect</Button>
                         <Button Width="75" Height="30" Grid.Column="0" Grid.Row="0" Click="ButtonRefresh_Click" HorizontalAlignment="Right" Margin="2,2,2,2">Refresh</Button>
 
 						<ListView Name="ListViewFlowCaseList" Grid.Column="0" Grid.Row="1" ItemsSource="{Binding Path=FlowLogSearch.FlowLogList}" IsSynchronizedWithCurrentItem="True" SelectionChanged="ListViewFlowCaseList_SelectionChanged">
