--- a/UI/Login/ICDEntryPage.xaml
+++ b/UI/Login/ICDEntryPage.xaml
@@ -45,6 +45,7 @@
                             <Code ICD9="795.09" ICD10="R87.820" Description="Cervical low risk human papillomavirus (HPV) DNA test positive" Test="Cytology" Quantity="1"/>
                             <Code ICD9="V22.0" ICD10="Z34.00" Description="Encounter for supervision of normal first pregnancy, unspecified trimester" Test="Cytology" Quantity="1"/>
                             <Code ICD9="" ICD10="Z34.01" Description="Encounter for supervision of normal first pregnancy, first trimester" Test="Cytology" Quantity="1"/>
+                            <Code ICD9="" ICD10="Z34.02" Description="Encounter for supervision of normal first pregnancy, second trimester" Test="Cytology" Quantity="1"/>
                             <Code ICD9="V22.1" ICD10="Z34.80" Description="Encounter for supervision of other normal pregnancy, unspecified trimester" Test="Cytology" Quantity="1"/>
                             <Code ICD9="" ICD10="Z34.81" Description="Encounter for supervision of other normal pregnancy, first trimester" Test="Cytology" Quantity="1"/>
                             <Code ICD9="V22.1" ICD10="Z34.90" Description="Encounter for supervision of normal pregnancy, unspecified, unspecified trimester" Test="Cytology" Quantity="1"/>                            
@@ -68,11 +69,13 @@
                             <Code ICD9="153.9" ICD10="C18.9" Description="Malignant neoplasm of colon, unspecified" Quantity="1"/>
                             <Code ICD9="287.5" ICD10="D69.6" Description="Thrombocytopenia, unspecified" Quantity="1"/>
                             <Code ICD9="453.9" ICD10="I82.91" Description="Chronic embolism and thrombosis of unspecified vein" Quantity="1"/>
+                            <Code ICD9="626.0" ICD10="N91.2" Description="Amenorrhea, unspecified" Test="Cytology" Quantity="1"/>
                             <Code ICD9="626.6" ICD10="N92.0" Description="Excessive and frequent menstruation (heavy)" Test="Cytology" Quantity="1"/>
                             <Code ICD9="626.6" ICD10="N92.1" Description="Excessive and frequent menstruation (irregular)" Test="Cytology" Quantity="1"/>
                             <Code ICD9="626.6" ICD10="N92.4" Description="Excessive bleeding in the premenopausal period" Test="Cytology" Quantity="1"/>
+                            <Code ICD9="" ICD10="N93.9" Description="Abnormal uterine and vaginal bleeding, unspecified" Test="Cytology" Quantity="1"/>
                             <Code ICD9="625.3" ICD10="N94.6" Description="Dysmenorrhea, unspecified (painful menstruation)" Test="Cytology" Quantity="1"/>
-                            <Code ICD9="626.0" ICD10="N91.2" Description="Amenorrhea, unspecified" Test="Cytology" Quantity="1"/>
+                            
                         </Codes>
                     </x:XData>
                 </XmlDataProvider>
