--- a/UI/LockedCaseDialog.xaml
+++ b/UI/LockedCaseDialog.xaml
@@ -2,36 +2,74 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:converter="clr-namespace:YellowstonePathology.UI.Converter"
-        Title="Locked Cases" Height="350" Width="414"
+        Title="Locked Cases" Height="350" Width="450"
 		WindowStartupLocation="CenterScreen">
-    <Grid>
-		<Grid.ColumnDefinitions>
-			<ColumnDefinition></ColumnDefinition>
-		</Grid.ColumnDefinitions>
-		<Grid.RowDefinitions>
-			<RowDefinition Height="*"></RowDefinition>
-			<RowDefinition Height="Auto"></RowDefinition>
-		</Grid.RowDefinitions>
+    <Grid Margin="5,5,5,5">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+        </Grid.RowDefinitions>
 
-		<ListView Name="listViewLockList" Grid.Column="0" Grid.Row="0" Margin="2" ItemsSource="{Binding}">
-			<ListView.View>
-				<GridView AllowsColumnReorder="True">
-					<GridViewColumn DisplayMemberBinding="{Binding Path=LockedBy}" Header="Locked By" Width="120"/>
-					<GridViewColumn DisplayMemberBinding="{Binding Path=KeyString}" Header="Master Accession No" Width="120"/>
-					<GridViewColumn DisplayMemberBinding="{Binding Path=LockDate, Converter={StaticResource ShortDateTimeConverter}}" Header="Time" Width="120"/>
-				</GridView>
-			</ListView.View>
-		</ListView>
+        <Button Grid.Row="0" Margin="5,5,5,5" Height="30" Width="100" HorizontalAlignment="Right" Click="ButtonRefresh_Click">Refresh</Button>
+        <TabControl Grid.Row="1">
+            <TabItem Header="Current Locks">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                    </Grid.RowDefinitions>
 
-		<Grid Grid.Column="0" Grid.Row="1">
-			<Grid.ColumnDefinitions>
-				<ColumnDefinition Width="*"></ColumnDefinition>
-				<ColumnDefinition Width="*"></ColumnDefinition>
-				<ColumnDefinition Width="*"></ColumnDefinition>
-			</Grid.ColumnDefinitions>
-			<Button Name="ButtonDelete" Grid.Column="0" Grid.Row="0" Style="{StaticResource NormalButton}" Width="100" HorizontalAlignment="Left" Click="ButtonDelete_Click">Clear Lock</Button>
-			<Button Name="ButtonRefresh" Grid.Column="1" Grid.Row="0" Style="{StaticResource NormalButton}" Width="100" HorizontalAlignment="Center" Click="ButtonRefresh_Click">Refresh</Button>
-			<Button Name="ButtonOk" Grid.Column="2" Grid.Row="0" Style="{StaticResource NormalButton}" Width="100" HorizontalAlignment="Right" Click="ButtonOk_Click">Ok</Button>
-		</Grid>
-	</Grid>
+                    <ListView Name="listViewLockList" Grid.Column="0" Grid.Row="0" Margin="2" ItemsSource="{Binding Path=LockItemCollection}">
+                        <ListView.View>
+                            <GridView AllowsColumnReorder="True">
+                                <GridViewColumn DisplayMemberBinding="{Binding Path=LockedBy}" Header="Locked By" Width="120"/>
+                                <GridViewColumn DisplayMemberBinding="{Binding Path=KeyString}" Header="Master Accession No" Width="120"/>
+                                <GridViewColumn DisplayMemberBinding="{Binding Path=LockDate, Converter={StaticResource ShortDateTimeConverter}}" Header="Time" Width="120"/>
+                            </GridView>
+                        </ListView.View>
+                    </ListView>
+
+                    <Grid Grid.Column="0" Grid.Row="1">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"></ColumnDefinition>
+                            <ColumnDefinition Width="*"></ColumnDefinition>
+                            <ColumnDefinition Width="*"></ColumnDefinition>
+                        </Grid.ColumnDefinitions>
+                        <Button Name="ButtonDelete" Grid.Column="0" Grid.Row="0" Style="{StaticResource NormalButton}" Width="100" HorizontalAlignment="Left" Click="ButtonDelete_Click">Clear Lock</Button>
+                        <Button Name="ButtonOk" Grid.Column="2" Grid.Row="0" Style="{StaticResource NormalButton}" Width="100" HorizontalAlignment="Right" Click="ButtonOk_Click">Ok</Button>
+                    </Grid>
+                </Grid>
+
+            </TabItem>
+
+            <TabItem Header="New Locks">
+                <ListView Name="ListViewNewLocks" Grid.Column="0" Grid.Row="0" Margin="2" ItemsSource="{Binding Path=LockedItems}">
+                    <ListView.View>
+                        <GridView AllowsColumnReorder="True">
+                            <GridViewColumn DisplayMemberBinding="{Binding Path=LockedBy}" Header="Locked By" Width="120"/>
+                            <GridViewColumn DisplayMemberBinding="{Binding Path=KeyString}" Header="Master Accession No" Width="120"/>
+                            <GridViewColumn DisplayMemberBinding="{Binding Path=LockDate, Converter={StaticResource ShortDateTimeConverter}}" Header="Time" Width="120"/>
+                        </GridView>
+                    </ListView.View>
+                </ListView>
+            </TabItem>
+
+            <TabItem Header="Stack Items">
+                <ListView Name="ListViewStackItems" Grid.Column="0" Grid.Row="0" Margin="2" ItemsSource="{Binding Path=Documents}">
+                    <ListView.View>
+                        <GridView AllowsColumnReorder="True">
+                            <GridViewColumn DisplayMemberBinding="{Binding Path=Type.Name}" Header="Object Type" Width="120"/>
+                            <GridViewColumn DisplayMemberBinding="{Binding Path=Key}" Header="Key" Width="120"/>
+                        </GridView>
+                    </ListView.View>
+                </ListView>
+            </TabItem>
+        </TabControl>
+    </Grid>
 </Window>
