--- a/UI/LockedCaseDialog.xaml
+++ b/UI/LockedCaseDialog.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:converter="clr-namespace:YellowstonePathology.UI.Converter"
-        Title="Locked Cases" Height="350" Width="450"
+        Title="Locked Cases" Height="350" Width="650"
 		WindowStartupLocation="CenterScreen">
     <Grid Margin="5,5,5,5">
         <Grid.ColumnDefinitions>
@@ -35,6 +35,7 @@
                             <GridViewColumn DisplayMemberBinding="{Binding Path=LockedBy}" Header="Locked By" Width="120"/>
                             <GridViewColumn DisplayMemberBinding="{Binding Path=KeyString}" Header="Master Accession No" Width="120"/>
                             <GridViewColumn DisplayMemberBinding="{Binding Path=LockDate, Converter={StaticResource ShortDateTimeConverter}}" Header="Time" Width="120"/>
+                            <GridViewColumn DisplayMemberBinding="{Binding Path=ComputerName}" Header="Computer" Width="120"/>
                         </GridView>
                     </ListView.View>
                 </ListView>
