Remove lock from Workspace enable rules

--- a/UI/Surgical/TypingWorkspace.xaml
+++ b/UI/Surgical/TypingWorkspace.xaml
@@ -772,10 +772,10 @@
 			</StatusBarItem>
 
 			<StatusBarItem>
-				<TextBlock Margin="2" TextAlignment="Right" HorizontalAlignment="Stretch" VerticalAlignment="Center">Lock Status:</TextBlock>
+				<TextBlock Margin="2" TextAlignment="Right" HorizontalAlignment="Stretch" VerticalAlignment="Center">Lock Acquired By</TextBlock>
 			</StatusBarItem>
 			<StatusBarItem>
-				<TextBlock Width="300" Margin="2" TextAlignment="Left" HorizontalAlignment="Stretch" VerticalAlignment="Center" Text="{Binding Path=Lock.LockMessage}"></TextBlock>
+				<TextBlock Width="300" Margin="2" TextAlignment="Left" HorizontalAlignment="Stretch" VerticalAlignment="Center" Text="{Binding Path=AccessionOrder.LockAquiredByUserName}"></TextBlock>
 			</StatusBarItem>
 
 			<StatusBarItem>
