--- a/UI/MainWindow.xaml
+++ b/UI/MainWindow.xaml
@@ -102,12 +102,14 @@
 							<TextBlock Margin="2,0,0,0">Save</TextBlock>
 						</StackPanel>
 				</Button>
-				<Button Click="ToolBarButtonAccessionLock_Click" ToolTip="Lock/Unlock Case" Margin="2,0,0,0" Height="22" Name="ToolBarButtonAccessionLock">
-					<StackPanel Orientation="Horizontal">
-						<Image Source="{Binding Path=Lock.LockImage}" Name="LockImage"></Image>
-						<TextBlock Margin="2,0,0,0">Lock</TextBlock>
-					</StackPanel>
-				</Button>
+
+                    <Button Click="ToolBarButtonRefresh_Click" ToolTip="Refresh" Margin="2,0,0,0" Height="22" Name="ToolBarButtonRefresh">
+                        <StackPanel Orientation="Horizontal">
+                            <Image Source="/Resources/Refresh.ico"></Image>
+                            <TextBlock Margin="2" VerticalAlignment="Center">Refresh</TextBlock>
+                        </StackPanel>
+                    </Button>
+                
                     <Button Click="ToolBarButtonViewDocument_Click" ToolTip="View Document" Height="22" Name="ToolBarButtonViewDocument" MouseDoubleClick="ToolBarButtonViewDocument_MouseDoubleClick">
                         <StackPanel Orientation="Horizontal">
 						<Image Source="/Graphics/Document.jpg"></Image>
