--- a/UI/Test/LabWorkspace.xaml
+++ b/UI/Test/LabWorkspace.xaml
@@ -814,23 +814,21 @@
 				<TextBlock Margin="25,2,2,2" TextAlignment="Right" HorizontalAlignment="Stretch" VerticalAlignment="Center">Current User:</TextBlock>
 			</StatusBarItem>
 			<StatusBarItem>
-				<ComboBox Name="ComboCurrentUser" Width="120"  Margin="2" HorizontalAlignment="Stretch"
-                        VerticalAlignment="Center" ItemsSource="{Binding Path=LogUsers}" DisplayMemberPath="DisplayName"
-						BorderBrush="LightGray" BorderThickness="1" SelectionChanged="ComboCurrentUser_SelectionChanged"></ComboBox>
-			</StatusBarItem>
+                <TextBlock Width="200" Margin="2" TextAlignment="Left" HorizontalAlignment="Stretch" VerticalAlignment="Center" Text="{Binding Path=SystemIdentity.User.UserName}"></TextBlock>
+            </StatusBarItem>
 
 			<StatusBarItem>
 				<TextBlock Margin="2" TextAlignment="Right" HorizontalAlignment="Stretch" VerticalAlignment="Center">Locked By:</TextBlock>
 			</StatusBarItem>
 			<StatusBarItem>
-                <TextBlock Width="300" Margin="2" TextAlignment="Left" HorizontalAlignment="Stretch" VerticalAlignment="Center" Text="{Binding Path=AccessionOrder.LockAquiredByUserName}"></TextBlock>
+                <TextBlock Width="300" Margin="2" TextAlignment="Left" HorizontalAlignment="Stretch" VerticalAlignment="Center" Text="{Binding Path=AccessionOrder.LockStatus}"></TextBlock>
 			</StatusBarItem>
 
 			<StatusBarItem>
 				<TextBlock Margin="2" TextAlignment="Right" HorizontalAlignment="Stretch" VerticalAlignment="Center">Report No:</TextBlock>
 			</StatusBarItem>
 			<StatusBarItem>
-				<TextBlock Width="60" Margin="2" TextAlignment="Left" HorizontalAlignment="Stretch" VerticalAlignment="Center" Text="{Binding Path=PanelSetOrder.ReportNo}"></TextBlock>
+				<TextBlock Width="100" Margin="2" TextAlignment="Left" HorizontalAlignment="Stretch" VerticalAlignment="Center" Text="{Binding Path=PanelSetOrder.ReportNo}"></TextBlock>
 			</StatusBarItem>
             
         </StatusBar>
